# dockguard

./: CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE.md  README.md  bumpversion.sh
.github/workflows/: ci.yml  publish.yml
packaging/: dockguard.service
src/: logging.rs  main.rs
src/config/: mod.rs  tests.rs
src/labels/: mod.rs  tests.rs
src/scheduler/: mod.rs  tests.rs
src/self_container/: mod.rs  tests.rs
src/updater/: mod.rs  tests.rs
src/watcher/: mod.rs  tests.rs
