[package]
name = "dockguard"
description = "A Docker container update watcher"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/h4llow3En/dockguard"
keywords = ["docker", "containers", "watcher", "updater"]
categories = ["command-line-utilities"]

[[bin]]
name = "dockguard"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
bollard = { version = "0.20.1", features = ["ssl"] }
tokio = { version = "1.50", features = ["full"]}
clap = { version = "4.5", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }