[package]
name = "dockguard"
authors = ["Felix Döring <development@felixdoering.com>"]
description = "A Docker container update watcher"
version = "0.1.5"
edition = "2024"
license = "MIT"
repository = "https://github.com/h4llow3En/dockguard"
keywords = ["docker", "containers", "watcher", "updater"]
categories = ["command-line-utilities"]

[[bin]]
name = "dockguard"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
cron = "0.15"
chrono = "0.4"
futures-util = "0.3"
bollard = { version = "0.20.1", features = ["ssl"] }
tokio = { version = "1.50", features = ["full"]}
tokio-util = { version = "0.7", features = ["rt"]}
clap = { version = "4.6", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }

[dev-dependencies]
tokio = { version = "1.50", features = ["test-util"] }
